# winpynotify

./: LICENSE  README.md  setup.cfg  win_notify.py
src/winpynotify/: win_notify.py
tests/: image_notify_test.py
