[metadata]
name = WinPyNotify
version = 1.0.0
author = Latypov Ivan
author_email = paramorphling@gmail.com
description = Windows Toast notifier for python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    winrt
    requests
    Pillow

[options.packages.find]
where = src